useEffect 및 useRef 를 활용한 모션 작업

--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -9,6 +9,14 @@
     width: 1180px;
     margin: 100px auto;
     min-height: 400px;
+    transition: 1s;
+    transform: translateY(100px);
+  }
+  &.on {
+    > .inner {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
 // tablet
@@ -26,7 +34,7 @@
 }
 // mobile
 @media screen and (max-width: $mp) {
-  .content{
+  .content {
     figure {
       height: 150px;
     }
