--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -9,8 +9,9 @@
     width: 1180px;
     margin: 100px auto;
     min-height: 400px;
-    transition: 1s;
+    transition: opacity 1s, transform 1s;
     transform: translateY(100px);
+    opacity: 0;
   }
   &.on {
     > .inner {
