기본기능 완료

--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -1,6 +1,6 @@
 .Community {
   figure {
-    background-color: hotpink;
+    background: hotpink;
   }
   > .inner {
     .inputBox {
@@ -11,7 +11,7 @@
       textarea {
         width: 50%;
         padding: 8px 10px;
-        border: 1px solid 20px;
+        border: 1px solid #aaa;
         margin-bottom: 20px;
         resize: none;
       }
@@ -41,6 +41,14 @@
         background: #fff;
         .txt {
           width: 70%;
+          input,
+          textarea {
+            width: 70%;
+            border: 1px solid #bbb;
+            padding: 8px 12px;
+            margin-bottom: 10px;
+            resize: none;
+          }
         }
         .btnSet {
           display: flex;
